# MIK-Machine

./: CMakeLists.txt  README.md  mik_tusk.html
release/: .fuse_hidden000010a80000000f  .fuse_hidden000010e600000012  .fuse_hidden000010f800000014  CMakeCache.txt  Makefile  cmake_install.cmake  mik8
src/: main.c  mik.c  mik.h  mikexecute.c  mikexecute.h  mikparse.c  mikparse.h  parsedexal.c  parsedexal.h
tests/: test1.out  test10.out  test2.out  test3.out  test5.out  test6.out  test7.out  test9.out
